nova section e bug fix

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -37,6 +37,9 @@
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#portfolio">Iniciação Científica</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#participe">Participe</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -207,7 +210,7 @@
                         <div class="portfolio-caption">
                             <h4>Mapeamento do Uso de Estratégias de Aprendizagem Ativa numa Escola de Engenharia</h4>
                         </div>
-                    </a> 
+                    </a>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a class="shadow-sm portfolio-link" data-toggle="modal" href="#portfolioModal2">
@@ -262,6 +265,38 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section id="participe" class="p-0 bg-white">
+        <div class="container">
+            <div class="txt my-auto">
+                <h2 class="mb-3 mr-5 text-warning">Ficou interessado? <span style="color: #004684;"><strong>Então
+                            Participe!</strong></span></h2>
+                <div class="content">
+                <p class="">
+                    O procedimento de participação no Programa de Iniciação Científica Mauá requer inicialmente que o
+                    aluno interessado procure um professor orientador que desenvolva pesquisa científica ou tecnológica
+                    no tema de interesse ou vice-versa. Nesse sentido, acesse <a href="http://www.maua.br/pesquisas" target="_blank">http://www.maua.br/pesquisas</a>
+                    para obter informações sobre as áreas de pesquisa desenvolvidas na Mauá e as oportunidades
+                    referentes à Iniciação Científica. Depois desse contato e uma vez que o professor e o aluno estejam
+                    de acordo, deverá ser apresentado pelo professor orientador um pedido de bolsa de Iniciação
+                    Científica para o aluno.
+                </p>
+                    <div><span> </span></div>
+                        <span>No cronograma de execução dessas bolsas há a possibilidade de solicitação duas vezes por ano:</span>
+                        <div><span> </span></div>
+                        <span>(1) até 05/02 para bolsas com duração de 01/03 a 31/12; e</span>
+                        <div><span> </span></div>
+                        <span>(2) até 05/08 para bolsas com duração de 01/08 a 31/07 do ano seguinte.</span>
+                        <div><span> </span></div>
+                    <span>Para mais informações <a
+                        href="https://www.maua.br/files/022018/iniciacao-cientifica-participacao-150936.pdf"
+                        download="Iniciação científica - participação"
+                        target="_blank">Clique aqui</a></span>
+                    </div>
+            </div>
+        </div>
+
     </section>
 
     <footer class="py-4 px-5 bg-dark row">
