arrumando texto final

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -285,14 +285,14 @@
                     <div><span> </span></div>
                         <span>No cronograma de execução dessas bolsas há a possibilidade de solicitação duas vezes por ano:</span>
                         <div><span> </span></div>
-                        <span>(1) até 05/02 para bolsas com duração de 01/03 a 31/12; e</span>
+                        <span>(1) até 05/02 para bolsas com duração de 01/03 a 31/12;</span>
                         <div><span> </span></div>
                         <span>(2) até 05/08 para bolsas com duração de 01/08 a 31/07 do ano seguinte.</span>
                         <div><span> </span></div>
-                    <span>Para mais informações <a
+                    <span>Para mais informações, <a
                         href="https://www.maua.br/files/022018/iniciacao-cientifica-participacao-150936.pdf"
                         download="Iniciação científica - participação"
-                        target="_blank">Clique aqui</a></span>
+                        target="_blank">clique aqui</a>.</span>
                     </div>
             </div>
         </div>
