--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -50,13 +50,13 @@
             <div class="row h-100">
                 <div class="col-12 my-auto">
                     <div class="mr-4">
-                        <h1 class="mb-3 text-warning">Iniciação Científica</h1>
+                        <h1 class="mb-3" style="color: #fdd835">Iniciação Científica</h1>
                         <p class="text-white float-right">
                             Conheça as pesquisas e inovações que são desenvolvidas no Instituto Mauá de Tecnologia.
                         </p>
                     </div>
                 </div>
-            </div>
+            </div> 
         </div>
     </section>
 
@@ -64,7 +64,7 @@
         <div class="image"></div>
         <div class="txt text-right my-auto">
             <div class="skew"></div>
-            <h2 class="mb-3 mr-5 text-warning">O que é <span style="color: #004684;"><strong>Iniciação
+            <h2 class="mb-3 mr-5 " style="color: #fdd835">O que é <span style="color: #283593;"><strong>Iniciação
                         Científica?</strong></span></h2>
             <p class="mr-5 float-right">
                 São estudos dirigidos por equipes capacitadas de professores e alunos visando a contribuição tecnológica
@@ -75,7 +75,7 @@
 
 
     <section class="bg-light page-section py-0" id="portfolio">
-        <div class="py-4 row">
+        <div class="pb-4 row" style="padding-top: 5rem;">
             <div class="container header">
                 <div class="row">
                     <h2 class="title">Iniciações Científicas</h2>
@@ -270,7 +270,7 @@
     <section id="participe" class="p-0 bg-white">
         <div class="container">
             <div class="txt my-auto">
-                <h2 class="mb-3 mr-5 text-warning">Ficou interessado? <span style="color: #004684;"><strong>Então
+                <h2 class="mb-3 mr-5" style="color: #fdd835">Ficou interessado? <span style="color: #283593;"><strong>Então
                             Participe!</strong></span></h2>
                 <div class="content">
                 <p class="">
@@ -366,7 +366,7 @@
                                 </p>
                                 <ul class="list-inline">
                                     <li>Aluno(a): Paulo Henrique Mendes Silva</li>
-                                    <li>Orientador: Octavio Mattasoglio Neto</li>
+                                    <li>Orientador(a): Octavio Mattasoglio Neto</li>
                                     <li>Projeto: <a
                                             href="https://www.maua.br/files/122018/mapeamento-do-uso-estrategias-aprendizagem-ativa-numa-escola-engenharia-281636.pdf"
                                             download="Mapeamento do Uso de Estratégias de Aprendizagem  Ativa numa Escola de Engenharia"
@@ -419,7 +419,7 @@
                                     armazenamento à 5 °C. </p>
                                 <ul class="list-inline">
                                     <li>Aluno(a): Letícia Hana Matuzaki </li>
-                                    <li>Orientador: Cynthia Jurkiewicz Kunigk</li>
+                                    <li>Orientador(a): Cynthia Jurkiewicz Kunigk</li>
                                     <li>Projeto: <a
                                             href="https://www.maua.br/files/122018/aplicacao-probioticos-encapsulados-barra-fruta-281616.pdf"
                                             download="Aplicação de Probióticos Encapsulados em Barra de Fruta"
@@ -474,7 +474,7 @@
                                 </p>
                                 <ul class="list-inline">
                                     <li>Aluno(a): Beatriz Davanso Mirkai </li>
-                                    <li>Orientador: Alessandra Dutra Coelho</li>
+                                    <li>Orientador(a): Alessandra Dutra Coelho</li>
                                     <li>Projeto: <a
                                             href="https://www.maua.br/files/122018/aplicacao-probioticos-encapsulados-barra-fruta-281616.pdf"
                                             download="Aplicações de Automação Voltadas para o Rastreamento de Animais Domésticos"
@@ -528,7 +528,7 @@
                                 </p>
                                 <ul class="list-inline">
                                     <li>Aluno(a): Louise de Fátima Almeida Mendes</li>
-                                    <li>Orientador: Pedro Henrique Cerento de Lyra</li>
+                                    <li>Orientador(a): Pedro Henrique Cerento de Lyra</li>
                                     <li>Projeto: <a
                                             href="https://www.maua.br/files/122018/analise-do-impacto-ondas-pontes-costeiras-281645.pdf"
                                             download="Análise do Impacto de Ondas em Pontes Costeiras"
@@ -585,7 +585,7 @@
                                 </p>
                                 <ul class="list-inline">
                                     <li>Aluno(a): Paulo Gabriel Franco Martins</li>
-                                    <li>Orientador: Andréia Azeredo Nince</li>
+                                    <li>Orientador(a): Andréia Azeredo Nince</li>
                                     <li>Projeto: <a
                                             href="https://www.maua.br/files/122018/concreto-ultra-alto-desempenho-reforcado-com-fibra-281646.pdf"
                                             download="Concreto de Ultra Alto Desempenho Reforçado com Fibra"
@@ -627,7 +627,7 @@
                                 </p>
                                 <ul class="list-inline">
                                     <li>Aluno(a): Bruno Gonçalez Caruso</li>
-                                    <li>Orientador: Wanderson de Oliveira Assis</li>
+                                    <li>Orientador(a): Wanderson de Oliveira Assis</li>
                                     <li>Projeto: <a
                                             href="https://www.maua.br/files/122018/controle-movimentacao-robo-movel-por-meio-aplicativo-para-dispositivo-movel-281634.pdf"
                                             download="Controle de Movimentação de Robô Móvel por Meio de Aplicativo para Dispositivo Móvel"
